[package]
name = "halo2curves"
version = "0.3.2"
authors = [
  "Sean Bowe <ewillbefull@gmail.com>",
  "Jack Grigg <jack@z.cash>",
  "Alex Vlasov <alex.m.vlasov@gmail.com>",
  "Alex Gluchowski <alex@gluchowski.net>"
]
license = "MIT/Apache-2.0"
edition = "2018"
repository = "https://github.com/kilic/pairing"
readme = "README.md"
description = "Elliptic curve implementations and wrappers for halo2 library"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
rand_xorshift = "0.3"
ark-std = { version = "0.3" }
bincode = "1.3.3"
proptest = "1.2.0"

[dependencies]
subtle = "2.4"
ff = "0.13.0"
group = "0.13.0"
pasta_curves = "0.5.0"
static_assertions = "1.1.0"
rand = "0.8"
rand_core = { version = "0.6", default-features = false }
lazy_static = "1.4.0"
num-bigint = "0.4.3"
num-traits = "0.2"
paste = "1.0.11"
serde = { version = "1.0", default-features = false, optional = true }
serde_arrays = { version = "0.1.0", optional = true }
blake2b_simd = "1"
#halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", features = ["circuit-params"], tag = "v2023_04_20" }
#halo2_proofs = { git = "https://github.com/taikoxyz/halo2" }
num_cpus = "1.15.0"
rayon = "1.7.0"

#[patch.'https://github.com/taikoxyz/halo2']
#halo2_proofs = { path = "../halo2/halo2_proofs" }


[features]
default = [ "reexport" ]
asm = []
prefetch = []
print-trace = [ "ark-std/print-trace" ]
derive_serde = [ "serde/derive" ]
reexport = []

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1

[[bench]]
name = "less_than"
harness = false
